force-app/main/default/objects/Weekly_Scorecard__c/Weekly_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Weekly Scorecard</label>
    <nameField>
        <label>Weekly Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>