force-app/main/default/objects/Weekly_Scorecard__c/fields/Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments__c</fullName>
    <label>Accomplishments</label>
    <type>TextArea</type>
</CustomField>