force-app/main/default/objects/Weekly_Scorecard__c/fields/Blog_Posts__c.field-meta.xml
<CustomField>
    <fullName>Blog_Posts__c</fullName>
    <label>Blog Posts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>