force-app/main/default/objects/Weekly_Scorecard__c/fields/Customer_Problems__c.field-meta.xml
<CustomField>
    <fullName>Customer_Problems__c</fullName>
    <label>Customer Problems</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>