force-app/main/default/objects/Weekly_Scorecard__c/fields/Customer_Problems_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Problems_Description__c</fullName>
    <label>Customer Problems Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>