force-app/main/default/objects/Weekly_Scorecard__c/fields/Sales_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Sales_Meetings__c</fullName>
    <label>Sales Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>