force-app/main/default/objects/Weekly_Scorecard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Billable_Hours__c</columns>
    <columns>Revenue__c</columns>
    <columns>Cost__c</columns>
    <columns>Blog_Posts__c</columns>
    <columns>Sales_Meetings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>